# guetzli-go

./: .gitattributes  .gitignore  README.md  bench_test.go  capi.cc  capi.h  cgo.go  changes.md  guetzli.go  guetzli_test.go  hello.go  z_guetzli_butteraugli_comparator.cc  z_guetzli_dct_double.cc  z_guetzli_debug_print.cc  z_guetzli_entropy_encode.cc  z_guetzli_fdct.cc  z_guetzli_gamma_correct.cc  z_guetzli_idct.cc  z_guetzli_jpeg_data.cc  z_guetzli_jpeg_data_decoder.cc  z_guetzli_jpeg_data_encoder.cc  z_guetzli_jpeg_data_reader.cc  z_guetzli_jpeg_data_writer.cc  z_guetzli_jpeg_huffman_decode.cc  z_guetzli_output_image.cc  z_guetzli_preprocess_downsample.cc  z_guetzli_processor.cc  z_guetzli_quality.cc  z_guetzli_quantize.cc  z_guetzli_score.cc  z_guetzli_third_party_butteraugli.cc
apps/guetzli/: Makefile  main.go  main_all_formats.go
internal/guetzli/: .gitignore  CMakeLists.txt  bench_test.cc  build.bat  hello.cc  test_util.h
internal/guetzli/jpeg/: jpge.cpp
